--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^7.5.0",
+    "mysql2": "^3.16.0",
     "validator": "^13.15.26"
   },
   "devDependencies": {
