--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,15 @@
 {
-  "name": "kopi-nusantara-backend",
+  "name": "kopi-nusantara",
   "version": "1.0.0",
-  "description": "Backend API untuk Kopi Nusantara Coffee Shop",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend": "cd backend && npm start",
+    "frontend": "cd frontend && npm start"
   },
-  "keywords": [
-    "coffee",
-    "backend",
-    "api"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.16.0",
-    "validator": "^13.15.26"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "cors": "^2.8.5"
   }
 }
