--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "frontend": "cd frontend && npm start"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
