--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "kopi-nusantara",
+  "name": "kopi-nusantara-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Backend API for Kopi Nusantara",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "backend": "cd backend && npm start",
-    "frontend": "cd frontend && npm start"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
+    "multer": "^2.0.2",
+    "mysql2": "^3.16.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.0.1"
   }
 }
